# try-wgpu

./: LICENSE  README.md
.github/workflows/: wasm-build.yml
chunks-graphics/: Cargo.toml  Makefile
chunks-view/: index.html  package-lock.json  package.json
chunks-view/src/: main.js
chunks-view/src/lib/: utils.js
graphics/: Cargo.toml  Makefile
graphics/resources/earth/: earth.mtl
graphics/src/: fetch.rs  key.rs  lib.rs  shader.wgsl  sky.rs  state.rs
graphics/src/camera/: controller.rs  geometry.rs  keymap.rs  mod.rs  perspective.rs  uniform.rs
graphics/src/earth/: mod.rs  model.rs  property.rs  texture.rs  vertex.rs
graphics/src/light/: mod.rs  property.rs
graphics/src/model/: model.rs  texture.rs
graphics/src/shader/: atmosphere.wgsl  earth.wgsl  light.wgsl  sky.wgsl  star.wgsl
graphics/src/star/: mod.rs
graphics/src/sun/: mod.rs  property.rs
view/: index.html  package-lock.json  package.json
view/pkg/: graphics.d.ts  graphics.js  graphics_bg.wasm  graphics_bg.wasm.d.ts  package.json
view/src/: main.js  main.ts
