[package]
name = "chunks-graphics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
log = "0.4.22"
env_logger = "0.11.4"
wgpu = "22.1.0"

wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
pollster = "0.3"
winit = "0.30.5"
