[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.22"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.30"
wgpu = "22.1.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "Element",
]}
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
bytemuck = { version = "1.16.3", features = [ "derive" ] }
