[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.tobj]
version = "4.0.2"
default-features = false

[dependencies]
log = "0.4.22"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.30"
wgpu = "22.1.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "Element",
    "KeyboardEvent",
]}
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
bytemuck = { version = "1.16.3", features = [ "derive" ] }
cgmath = "0.18.0"
image = "0.25.2"
anyhow = "1.0.86"
getrandom = { version = "0.2", features = ["js"] }
